Fix chat container overflowing on mobile devices

--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -11,6 +11,8 @@
 @media only screen and (max-width: 720px) {
   .chatContainer {
     width: 100%;
+    min-width: 100%;
+    border-left: unset;
   }
 }
 
